--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/foxcaulfield/weather-cli"
+  },
+  "dependencies": {
+    "axios": "^1.6.8"
   }
 }
