--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
   },
   "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node weather.js",
+    "test1": "node weather.js -k",
+    "test2": "node weather.js -k 1",
+    "test3": "node weather.js -k 1 -c",
+    "test4": "node weather.js -k 1 -c m"
   },
   "keywords": [
     "cli",
@@ -23,6 +26,7 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
-    "chalk": "^5.3.0"
+    "chalk": "^5.3.0",
+    "yargs": "^17.7.2"
   }
 }
