--- a/app.config.json
+++ b/app.config.json
@@ -7,6 +7,8 @@
             "geocodingLocation": "/geo/1.0/direct",
             "geocodingZip": "/geo/1.0/zip",
             "geocodingReverse": "/geo/1.0/reverse"
-        }
+        },
+        "language": "en",
+        "units": "metric"
     }
 }
