Update project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "weather-cli",
+  "name": "what-is-the-weather",
   "version": "1.0.0",
   "description": "",
   "main": "weather.js",
@@ -22,7 +22,7 @@
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "https://github.com/foxcaulfield/weather-cli"
+    "url": "https://github.com/foxcaulfield/what-is-the-weather"
   },
   "dependencies": {
     "axios": "^1.6.8",
