--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "what-is-the-weather",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "description": "",
   "main": "weather.js",
   "bin": {
-    "weather": "weather.js"
+    "what-is-the-weather": "weather.js"
   },
   "type": "module",
   "scripts": {
